[package]
name = "mpf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = "2.5.0"

anyhow = "1.0.68"

clap = { version = "3.2.23", features = ["derive"] }

serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
human-panic = "1.0.3"

[target.'cfg(target_os = "macos")'.dependencies]
libproc="0.12.0"
libc="0.2.139"

[target.'cfg(target_os = "linux")'.dependencies]
procfs="0.15.1"
