[package]
name = "mpf"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/markbenvenuto/mpf"
license = "Apache-2.0"
description = "MongoDB specific process finder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = "2.5.0"

anyhow = "1.0.68"

clap = { version = "3.2.23", features = ["derive"] }

serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
human-panic = "1.0.3"

[target.'cfg(target_os = "macos")'.dependencies]
libproc="0.12.0"
libc="0.2.139"

[target.'cfg(target_os = "linux")'.dependencies]
procfs="0.15.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
